# PyAlembic

./: .gitignore  CMakeLists.txt  README.md  setup.py
PyIex/: CMakeLists.txt  iexmodule.cpp
PyImath/: CMakeLists.txt  PyImath.cpp  PyImathAutovectorize.h  PyImathBasicTypes.cpp  PyImathBasicTypes.h  PyImathBox.cpp  PyImathBox.h  PyImathBox2Array.cpp  PyImathBox3Array.cpp  PyImathBoxArrayImpl.h  PyImathColor.h  PyImathColor3.cpp  PyImathColor3ArrayImpl.h  PyImathColor4.cpp  PyImathColor4Array2DImpl.h  PyImathColor4ArrayImpl.h  PyImathDecorators.h  PyImathEuler.cpp  PyImathEuler.h  PyImathFixedArray.h  PyImathFixedArray2D.h  PyImathFixedMatrix.h  PyImathFixedVArray.cpp  PyImathFixedVArray.h  PyImathFrustum.cpp  PyImathFrustum.h  PyImathFun.cpp  PyImathFun.h  PyImathLine.cpp  PyImathLine.h  PyImathM44Array.h  PyImathMatrix.h  PyImathMatrix33.cpp  PyImathMatrix44.cpp  PyImathOperators.h  PyImathPlane.cpp  PyImathPlane.h  PyImathQuat.cpp  PyImathQuat.h  PyImathRandom.cpp  (+24 more)
tests/: IexTest.py  ImathTest.py  __init__.py  __main__.py  pyIexTest.py
