CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT (pyalembic)

SET(ILMBASE_VERSION_MAJOR "2")
SET(ILMBASE_VERSION_MINOR "2")
SET(ILMBASE_VERSION_PATCH "0")

SET(ILMBASE_VERSION ${ILMBASE_VERSION_MAJOR}.${ILMBASE_VERSION_MINOR}.${ILMBASE_VERSION_PATCH})
SET(ILMBASE_VERSION_API ${ILMBASE_VERSION_MAJOR}_${ILMBASE_VERSION_MINOR})


# enable the tests
ENABLE_TESTING()


# distro building 
SET(CPACK_PACKAGE_VERSION_MAJOR "${ILMBASE_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${ILMBASE_VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${ILMBASE_VERSION_PATCH}")
SET(CPACK_SOURCE_GENERATOR "TGZ")
set(CPACK_SOURCE_PACKAGE_FILE_NAME
    "${CMAKE_PROJECT_NAME}-${ILMBASE_VERSION}"
    )
set(CPACK_SOURCE_IGNORE_FILES
    "/.git*;/.cvs*;${CPACK_SOURCE_IGNORE_FILES}")
INCLUDE ( CPack )

# Set this option to find the C++ libs with their namespaced versions
# The python modules themselves are built without versioning
OPTION (NAMESPACE_VERSIONING "Use Namespace Versioning" ON)

# Setup osx rpathing
SET (CMAKE_MACOSX_RPATH 1)
SET (BUILD_WITH_INSTALL_RPATH 1)

SET (LIB_TYPE SHARED)

#FIND_PACKAGE ( PythonLibs REQUIRED )
#FIND_PACKAGE ( PythonInterp REQUIRED )
SET(PYTHON_INCLUDE_PATH
    ${CMAKE_INSTALL_PREFIX}/include/python3.6
    )
SET(PYTHON_LIBRARIES
    ${CMAKE_INSTALL_PREFIX}/lib/python36.lib
    )
SET(ILMBASE_LIBRARIES
    debug ${CMAKE_INSTALL_PREFIX}/debug/lib/Iex-2_2.lib
    optimized ${CMAKE_INSTALL_PREFIX}/lib/Iex-2_2.lib
    )

INCLUDE_DIRECTORIES (
    ${CMAKE_INSTALL_PREFIX}/include
    ${CMAKE_INSTALL_PREFIX}/include/OpenEXR
    PyIex
    PyImath
    ${PYTHON_INCLUDE_PATH}
    )

LINK_DIRECTORIES ( ${INSTALL_PREFIX}/lib )
#MESSAGE ( "ILMBASE_PACKAGE_PREFIX = " ${ILMBASE_PACKAGE_PREFIX})


SET (ILMBASE_LIBSUFFIX "")
IF (NAMESPACE_VERSIONING)
    SET ( ILMBASE_LIBSUFFIX "-${ILMBASE_VERSION_API}" )
ENDIF ()

##########################
ADD_SUBDIRECTORY ( PyIex )
ADD_SUBDIRECTORY ( PyImath )

##########################
# Tests
##########################
ADD_SUBDIRECTORY ( PyIexTest )
ADD_SUBDIRECTORY ( PyImathTest )

