SET(PROJECT_NAME iex)

ADD_LIBRARY(${PROJECT_NAME} ${LIB_TYPE}
    iexmodule.cpp
    )

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    ${PYTHON_LIBRARIES}
    ${ILMBASE_LIBRARIES}
    )

SET_TARGET_PROPERTIES(${PROJECT_NAME}
    PROPERTIES 
    PREFIX "" 
    SUFFIX ".pyd" 
    BUILD_WITH_INSTALL_RPATH ON
    )

