SET(PROJECT_NAME imath)
FILE(GLOB SRCS *.h *.cpp
    )
LIST(REMOVE_ITEM SRCS 
    #${CMAKE_CURRENT_LIST_DIR}/PyImathAutovectorize.h
    #${CMAKE_CURRENT_LIST_DIR}/PyImathAutovectorize.cpp
    ${CMAKE_CURRENT_LIST_DIR}/PyImathM44Array.h
    ${CMAKE_CURRENT_LIST_DIR}/PyImathM44Array.cpp
    )
ADD_LIBRARY(${PROJECT_NAME} ${LIB_TYPE}
    python_include.h
    ${SRCS}
    )

SET_TARGET_PROPERTIES(${PROJECT_NAME}
    PROPERTIES 
    PREFIX "" 
    SUFFIX ".pyd" 
    BUILD_WITH_INSTALL_RPATH ON
    )

TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PUBLIC
    PYIMATH_EXPORTS=1
    )

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    ${ILMBASE_LIBRARIES}
    ${PYTHON_LIBRARIES}
    )

